# did-sidecar

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  did-sidecar-spec.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  dataset.py  did_log.py  service_endpoint.py
app/routers/: __init__.py  admin.py  did_log.py  prepublish.py  resolve.py
app/schemas/: __init__.py  did.py  prepublish.py
app/services/: __init__.py  dataverse.py  did_minting.py  did_update.py  key_management.py
